--- a/study youtube/youtube.css
+++ b/study youtube/youtube.css
@@ -1,38 +1,41 @@
 .container {
     display: grid;
     grid-template: 
-    "header         header      header"
-    "left-menu      main        right-menu"
-    "footer         footer      footer";
+    "header         header      header"         100px
+    "sub-header     sub-header  sub-header"     50px
+    "left-menu      main        right-menu"     1fr
+    "footer         footer      footer"         100px /
+    300px           1fr       200px;        
 }
 
 .header {
     grid-area: header;
     background-color: lightcoral;
-    height: 100px;
+}
+
+.sub-header{
+    grid-area: sub-header;
+    background-color: darkred;
 }
 
 .left-menu {
     grid-area: left-menu;
     background-color: lightskyblue;
-    height: 300px;
 }
 
 .right-menu {
     grid-area: right-menu;
     background-color: lightgreen;
-    height: 300px;
 }
 
 .footer {
     grid-area: footer;
     background-color: lightpink;
-    height: 100px;
 }
 
 .main {
     grid-area: main;
     background-color: lightseagreen;
-    height: 300px;
+    min-height: 600px;
 }
 
