--- a/exercises/linkedout/linkedin.css
+++ b/exercises/linkedout/linkedin.css
@@ -3,3 +3,13 @@ body {
     /* height: 100vh; */
 }
 
+/* Main Grid */
+.container {
+    display: grid;
+    grid-template:
+    "top-menu       top-menu        top-menu"   100px
+    "left-menu      main            right-menu" 1fr /
+    300px           1fr             300px;
+    background-color: lightblue;
+    height: 100%;
+}
