--- a/exercises/linkedout/linkedin.css
+++ b/exercises/linkedout/linkedin.css
@@ -7,9 +7,14 @@ body {
 .container {
     display: grid;
     grid-template:
-    "top-menu       top-menu        top-menu"   100px
+    "top-menu       top-menu        top-menu"   60px
     "left-menu      main            right-menu" 1fr /
     300px           1fr             300px;
     background-color: lightblue;
     height: 100%;
+}
+
+.top-menu {
+    grid-area: top-menu;
+    background-color: lightskyblue;
 }
