--- a/exercises/linkedout/linkedin.css
+++ b/exercises/linkedout/linkedin.css
@@ -8,7 +8,7 @@ body {
     display: grid;
     grid-template:
     "top-menu       top-menu        top-menu"   60px
-    "left-menu      main            right-menu" 1fr /
+    "left-menu      main            right-menu" 500px /
     300px           1fr             300px;
     background-color: lightblue;
     height: 100%;
@@ -17,4 +17,9 @@ body {
 .top-menu {
     grid-area: top-menu;
     background-color: lightskyblue;
+}
+
+.left-menu {
+    grid-area: left-menu;
+    background-color: lightgreen;
 }
