add right-menu css

--- a/exercises/linkedout/linkedin.css
+++ b/exercises/linkedout/linkedin.css
@@ -23,3 +23,8 @@ body {
     grid-area: left-menu;
     background-color: lightgreen;
 }
+
+.right-menu {
+    grid-area: right-menu;
+    background-color: lightcoral;
+}
