--- a/exercises/linkedout/linkedin.css
+++ b/exercises/linkedout/linkedin.css
@@ -28,3 +28,8 @@ body {
     grid-area: right-menu;
     background-color: lightcoral;
 }
+
+.main {
+    grid-area: main;
+    background-color: lightsteelblue;
+}
