--- a/exercises/linkedout/linkedin.css
+++ b/exercises/linkedout/linkedin.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    /* height: 100vh; */
+    height: 100vh;
 }
 
 /* Main Grid */
@@ -8,10 +8,11 @@ body {
     display: grid;
     grid-template:
     "top-menu       top-menu        top-menu"   60px
-    "left-menu      main            right-menu" 500px /
+    "left-menu      main            right-menu" 1fr /
     300px           1fr             300px;
-    background-color: lightblue;
+    background-color: white;
     height: 100%;
+    gap: 30px
 }
 
 .top-menu {
@@ -22,11 +23,13 @@ body {
 .left-menu {
     grid-area: left-menu;
     background-color: lightgreen;
+    margin-left: 50px;
 }
 
 .right-menu {
     grid-area: right-menu;
     background-color: lightcoral;
+    margin-right: 50px;
 }
 
 .main {
