--- a/study youtube/youtube.css
+++ b/study youtube/youtube.css
@@ -78,7 +78,7 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 10px;
-    padding: 10px
+    padding: 10px;
     /* grid-template:
     "video video video video video"
     "video video video video video"; 
