change container-grid template heigth and width

--- a/exercises/discord/discord.css
+++ b/exercises/discord/discord.css
@@ -6,10 +6,10 @@ body {
 .container {
     display: grid;
     grid-template:
-    "left-menu      server-menu     top-menu"   1fr
+    "left-menu      server-menu     top-menu"  .1fr
     "left-menu      server-menu     chat"       1fr
-    "left-menu      server-menu     message"    1fr /
-    60px            120px           1fr;
+    "left-menu      server-menu     message"   .1fr /
+    .05fr           .1fr            1fr;
     background-color: beige;
     height: 100%;
 }
