add media query for hiding the server-menu at 1000px

--- a/exercises/discord/discord.css
+++ b/exercises/discord/discord.css
@@ -40,6 +40,12 @@ body {
     1fr;
 }
 
+@media screen and (max-width: 1000px) {
+    .server-menu{
+        display: none;
+    }
+}
+
 .info {
     grid-area: info;
     background-color: lightcoral;
