center compose button

--- a/exercises/gmail/gmail.css
+++ b/exercises/gmail/gmail.css
@@ -1,7 +1,10 @@
 body {
     margin: 0;
-    height: 100vh;
+    min-height: 100vh;
 }
+
+/* Min-height setzeun um beim vertikalen Scrollen den Hintergrund beizubehalten:
+https://stackoverflow.com/questions/14963393/my-body-background-color-disappears-when-scrolling */
 
 .container {
     display: grid;
@@ -55,14 +58,14 @@ body {
     grid-area: folders;
     background-color: dodgerblue;
     grid-template:
-    "compose"       .1fr
+    "compose"       .05fr
     "sub-folders"   1fr/
     1fr;
 }
 
 .compose {
     grid-area: compose;
-    width: 80px;
+    width: 100px;
     border: solid 1px gray;
     background-color: lightgrey;
     text-align: center;
